# advent_of_code

./: .gitignore  README.md
2022/day01/: Program.cs  day01.sln
2022/day02/: Program.cs  day02.sln
2022/day03/: Program.cs  day03.sln
2022/day04/: Program.cs  day04.sln
2022/day05/: Program.cs  day05.sln
2023/day03/: Cargo.toml
2023/day04/: Cargo.toml
2023/day10/: Cargo.toml
2023/day12/: out1.txt  out2.txt
2024/kotlin/src/: Day03.kt  Day04.kt  Day05.kt  Main.kt
2024/kotlin/src/day03/: day03.kt
2024/kotlin/src/day04/: day04.kt
2024/kotlin/src/day05/: day05.kt
2024/python/src/day01/: day01.py
2024/python/src/day02/: day02.py
