[package]
name = "day03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.12.0", features = [] }
time = { version = "0.3.30", features = [] }
num = { version = "0.4.1", features = [] }
